fix(ui): more text contrast

--- a/basic.css
+++ b/basic.css
@@ -28,9 +28,9 @@ accent: {{blue}}
   --text-0: {{hsl crust}};
   --text-1: var(--text-2);
   --text-2: {{hsl text}};
-  --text-3: {{hsl subtext1}};
-  --text-4: {{hsl subtext0}};
-  --text-5: {{hsl (mix text base 0.5)}};
+  --text-3: {{hsl subtext0}};
+  --text-4: {{hsl (mix text base 0.4)}};
+  --text-5: {{hsl (mix text base 0.2)}};
 
   --bg-1: {{hsl mantle}};
   --bg-2: {{hsl overlay0}};
