--- a/tinted.css
+++ b/tinted.css
@@ -29,8 +29,8 @@ accent: {{blue}}
   --text-1: var(--text-2);
   --text-2: {{hsl (lighten (mix accent text 0.075) 0.05)}};
   --text-3: {{hsl (lighten (mix accent subtext1 0.075) 0.05)}};
-  --text-4: {{hsl (lighten (mix accent subtext0 0.075) 0.05)}};
-  --text-5: {{hsl (mix text base 0.5)}};
+  --text-4: {{hsl (lighten (mix accent base 0.075) 0.25)}};
+  --text-5: {{hsl (lighten (mix accent base 0.075) 0.1)}};
 
   --bg-1: {{hsl (darken (mix accent mantle 0.2) 0.075)}};
   --bg-2: {{hsl (darken (mix accent overlay0 0.2) 0.075)}};
